# amos-platform-2.0

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENT_CONTEXT.md  AMOS_Launch_Posts.md  CLAUDE.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  OPENCLAW_ARCHITECTURE.md  README.md  SECURITY.md  digital_labor_linkedin.md  digital_labor_thread.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: auto-merge-bot.yml  ci.yml  qa-verification-bot.yml
amos-agent/: Cargo.toml  README.md
amos-agent-runtime/: Cargo.toml
amos-agent-runtime/src/: agent_loop.rs  bedrock.rs  lib.rs  model_registry.rs  prompt_builder.rs
amos-agent-runtime/src/memory/: mod.rs
amos-agent-runtime/src/tools/: bash.rs  browser_use.rs  load_canvas.rs  memory.rs  mod.rs  platform_create.rs  platform_execute.rs  platform_query.rs  platform_update.rs  read_file.rs  web_page.rs  web_search.rs
amos-agent/src/: agent_loop.rs  anthropic.rs  bedrock.rs  commands.rs  compact.rs  config.rs  lib.rs  main.rs  mcp.rs  model_registry.rs  provider.rs  routes.rs  task_consumer.rs  vertex.rs
amos-agent/src/agent_card/: mod.rs
amos-agent/src/harness_client/: mod.rs
amos-agent/src/memory/: mod.rs
amos-agent/src/tools/: file_tools.rs  git_tools.rs  memory_tools.rs  mod.rs  plan.rs  think.rs  web_search.rs
amos-agent/tests/: bedrock_envelope.rs
amos-agent/tests/fixtures/: bedrock_envelope_haiku_agent_local_tools.json  bedrock_envelope_haiku_no_tools.json  bedrock_envelope_sonnet_harness_tools.json
amos-api/: Cargo.toml
amos-api/src/: lib.rs  state.rs
amos-api/src/middleware/: auth.rs  error_handler.rs  mod.rs
amos-api/src/routes/: agent.rs  health.rs  mod.rs  solana.rs  token.rs
amos-cli/: Cargo.toml  README.md
amos-cli/src/: main.rs
amos-core/: Cargo.toml  README.md
amos-core/src/: config.rs  error.rs  hooks.rs  lib.rs  packages.rs  permissions.rs  settings.rs  tools.rs  types.rs  vault.rs
amos-core/src/token/: decay.rs  economics.rs  emission.rs  mod.rs  points.rs  revenue.rs  trust.rs
amos-harness/: Cargo.toml  README.md
amos-harness/prompts/: onboarding_walkthrough.md
amos-oracle/: Cargo.toml
amos-packages/amos-autoresearch/: Cargo.toml
amos-packages/amos-autoresearch/src/: lib.rs  routes.rs  types.rs
amos-packages/amos-autoresearch/src/darwinian/: evaluator.rs  mod.rs  mutator.rs  weights.rs
amos-packages/amos-autoresearch/src/fitness/: collector.rs  external.rs  metrics.rs  mod.rs  trading.rs
amos-packages/amos-autoresearch/src/swarm/: mod.rs  router.rs
amos-packages/amos-autoresearch/src/tools/: experiment_tools.rs  mod.rs  scorecard_tools.rs  swarm_tools.rs
amos-packages/amos-education/: Cargo.toml
amos-packages/amos-education/src/: lib.rs  scorm_parser.rs
amos-packages/amos-education/src/tools/: certification.rs  enrollment.rs  law_knowledge.rs  learning_coach.rs  mod.rs  scorm.rs
amos-packages/amos-social/: Cargo.toml
amos-packages/amos-social/src/: lib.rs
amos-packages/amos-social/src/prompts/: system.md
amos-packages/amos-social/src/tools/: analytics.rs  calendar.rs  hackernews.rs  linkedin.rs  mod.rs  reddit.rs  twitter.rs
amos-platform/: Cargo.toml  README.md
amos-platform/migrations/: .gitkeep  20250308000001_create_bounty_service_tables.sql  20250308000002_create_tenant_auth_tables.sql  20250309000003_create_activity_usage_tables.sql
amos-platform/src/: lib.rs  main.rs  server.rs  state.rs
amos-platform/src/auth/: mod.rs
amos-platform/src/billing/: mod.rs
amos-platform/src/governance/: mod.rs
amos-platform/src/middleware/: mod.rs
amos-platform/src/provisioning/: mod.rs
amos-platform/src/routes/: auth.rs  billing.rs  discovery.rs  governance.rs  health.rs  mod.rs  provisioning.rs  sync.rs  tenants.rs  token.rs  ui.rs
amos-platform/src/services/: README.md  bounty_service.rs  mod.rs
amos-platform/src/solana/: mod.rs
amos-platform/templates/: base.html  dashboard.html  login.html  register.html  settings.html
amos-relay/: .env.example  Cargo.toml  README.md
amos-relay/migrations/: 20260310000001_initial_relay_schema.sql  20260407000001_add_bounty_detail_columns.sql  20260411000001_rename_fee_columns_amos_only.sql  20260415000003_add_settlement_retry_count.sql  20260416000001_add_revision_and_governance.sql  20260423000001_oracle_decisions_and_outcomes.sql  20260423000002_oracle_intakes_and_escalations.sql  20260429000001_oracle_review_escalation_link.sql  20260429000002_backfill_policy_and_description_for_code_bounties.sql  20260429000003_add_merge_tracking_columns.sql  20260429000004_add_bounty_acceptance_fields.sql  20260429000005_add_intake_submitter_finder_fee.sql
amos-relay/src/: lib.rs  main.rs  middleware.rs  protocol_fees.rs  reputation.rs  server.rs  settlement_retry.rs  solana.rs  state.rs
amos-relay/src/routes/: agents.rs  bounties.rs  escalations.rs  harnesses.rs  health.rs  intakes.rs  metrics.rs  mod.rs  pool.rs  reputation.rs  webhooks.rs
amos-solana/: Anchor.toml  package-lock.json  package.json
deploy/: task-definition-harness.json
docs/: AMOS_HARNESS_AUDIT.md  AMOS_Strategy_AI.md  AMOS_THESIS_AND_STRATEGY.md  AMOS_THESIS_AND_STRATEGY_v2.md  BUG_REPORT_HARNESS_RELAY_INTEGRATION_2026-04-30.md  CLAUDE_CODE_PROMPT_AUTONOMOUS_AGENTS.md  CLAUDE_CODE_PROMPT_BOUNTY_TYPES.md  CORPORATE_STRUCTURE_ANALYSIS.md  DEFERRED_BOUNTIES.md  EAP_SPECIFICATION_v1.md  EXAMPLE_PROOF_RECEIPT.json  EXTERNAL_AGENT_PROTOCOL.md  MAINNET_LAUNCH_PLAN.md  MOLTBOOK_CONTENT.md  ONCHAIN_UPGRADE_2026_04_DIFF.md  OPS_BOUNTIES_v1.md  OPS_ONCHAIN_UPGRADE_001_DRAFT.md  OPS_ORACLE_001_DRAFT.md  PACKAGE_CREATION_GUIDE.md  PACKAGE_ECONOMY_INTEGRATION.md  PERSISTENT_AGENT_SPEC.md  README.md  RUNBOOK_UPGRADE_001_PATH_A.md  SEED_BOUNTY_CATALOG.md  SOCIAL_MEDIA_TOOLS_DESIGN_SPEC.md  SUBSCRIPTION_AND_ONBOARDING.md  THREAT_MODEL.md  TOOLS_INVENTORY.md  token_economy_equations.md  token_economy_math.md  whitepaper_simple.md  whitepaper_technical.md
scripts/: auto-merge-bot.sh  deploy-observability.sh  dev-setup.sh  init-db.sql  post_ops_bounties.sh  qa-verification-bot.py  qa-verification-bot.sh  verify-sns-wiring.sh
(+245 files in other folders)
