[package]
name = "amos-agent-runtime"
description = "AMOS Agent Runtime - V3 single-agent loop with 12 composable tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amos-core = { path = "../amos-core", features = ["db", "http"] }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

reqwest = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }

dashmap = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
pretty_assertions = "1.4"
mockall = "0.13"
