[package]
name = "amos-api"
description = "AMOS API - Axum/gRPC layer bridging Rust core and Rails"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amos-core = { path = "../amos-core", features = ["db", "http"] }
amos-agent-runtime = { path = "../amos-agent-runtime" }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

sqlx = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }

dotenvy = { workspace = true }
config = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
