[package]
name = "amos-cli"
description = "AMOS CLI - self-hosting administration and management"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "amos"
path = "src/main.rs"

[dependencies]
amos-core = { path = "../amos-core" }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }
