[package]
name = "amos-core"
description = "AMOS Core - shared types, configuration, errors, and token economics"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
db = ["sqlx"]
http = ["reqwest"]
packages = ["db"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }
bs58 = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
