[package]
name = "amos-platform"
description = "AMOS Platform - centralized token economics, governance, billing, and provisioning"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "amos-platform"
path = "src/main.rs"

[dependencies]
amos-core = { path = "../amos-core", features = ["db", "http"] }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# gRPC (harness ↔ platform communication)
tonic = { workspace = true }
prost = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }
# anchor-client = { workspace = true }  # Disabled due to dependency conflicts

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Docker/container provisioning
bollard = { workspace = true }

# Misc
secrecy = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
bs58 = { workspace = true }
hex = "0.4"
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
pretty_assertions = "1.4"
