[package]
name = "amos-autoresearch"
description = "AMOS Autoresearch Package — Darwinian optimization, swarm management, and fitness-driven agent coordination"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amos-core = { path = "../../amos-core", features = ["db", "packages"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Web framework (for package routes)
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP client (for external fitness metrics)
reqwest = { workspace = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Misc
rand = { workspace = true }
