[package]
name = "amos-education"
description = "AMOS Education Package — LMS, SCORM, law knowledge, and personalized learning for the harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amos-core = { path = "../../amos-core", features = ["db", "packages"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework (for package routes)
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# SCORM package parsing (ZIP + XML)
zip = { workspace = true }
quick-xml = { workspace = true }

# Vector embeddings (for law statute search)
pgvector = { workspace = true }
