[package]
name = "amos-social"
description = "AMOS Social Media Package — campaign strategy, content creation, multi-platform posting, and analytics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amos-core = { path = "../../amos-core", features = ["db", "packages"] }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework (for package routes)
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP client (for API calls)
reqwest = { workspace = true }

# IDs and time
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
